# ChangeLog for app-i18n/skk-jisyo-cdb
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/skk-jisyo-cdb/ChangeLog,v 1.5 2003/09/01 16:13:53 usata Exp $

*skk-jisyo-cdb-200309 (02 Sep 2003)

  02 Sep 2003; Mamoru KOMACHI <usata@gentoo.org> skk-jisyo-cdb-200309.ebuild:
  New snapshot

*skk-jisyo-cdb-200308 (02 Aug 2003)

  20 Aug 2003; Mamoru KOMACHI <usata@gentoo.org> skk-jisyo-cdb-200308.ebuild:
  Marked as stable

  02 Aug 2003; Mamoru KOMACHI <usata@gentoo.org> skk-jisyo-cdb-200308.ebuild:
  Updated snapshot

*skk-jisyo-cdb-200307 (13 Jul 2003)

  02 Aug 2003; Mamoru KOMACHI <usata@gentoo.org> skk-jisyo-cdb-200307.ebuild,
  Marked all arch stable

  13 Jul 2003; MATSUU Takuto <matsuu@gentoo.org> skk-jisyo-cdb-200307.ebuild:
  version bump. Thanks to usata@gentoo.org (Mamoru KOMACHI) in bug #23818.

*skk-jisyo-cdb-200305 (05 May 2003)

  05 May 2003; Patrick Kursawe <phosphan@gentoo.org>
  skk-jisyo-cdb-200305.ebuild:
  New package, ebuild provided by Mamoru KOMACHI <usata@sodan.ecc.u-tokyo.ac.jp>
  in bug #20454