@@ -1,10 +1,10 @@
+MD5 c8e9990fbd4279d2bc68b4acbaa55f9a ChangeLog 1274
+MD5 e92a48548554c80cf90e18df17ff6a82 metadata.xml 156
 MD5 7c9d7a40b864a7bf0a96824fde983325 skk-jisyo-cdb-200305.ebuild 942
 MD5 5bb381509dce84d72dde5ba84238a72e skk-jisyo-cdb-200307.ebuild 974
-MD5 7eedf5bf0e21259ea19937aec0c3fc8e skk-jisyo-cdb-200309.ebuild 689
-MD5 06abff436197652ea79bc6bc4a9e3d6a skk-jisyo-cdb-200310.ebuild 693
-MD5 930834be91b71f9c4bf4fd96a02c5ec3 ChangeLog 1102
-MD5 e92a48548554c80cf90e18df17ff6a82 metadata.xml 156
 MD5 159cc5368650ba5573b8bd999e3d2936 skk-jisyo-cdb-200308.ebuild 689
+MD5 9200fc753a1f262f74c01f927e33e2b1 skk-jisyo-cdb-200309.ebuild 694
+MD5 231a3acd5a14ee2acea460a0a9fffda5 skk-jisyo-cdb-200310.ebuild 699
 MD5 f91d3c22b0f00ec57b8fbc5dc664de34 files/digest-skk-jisyo-cdb-200305 222
 MD5 e45760cfd8d6307a3bdd9aed3879bee4 files/digest-skk-jisyo-cdb-200307 222
 MD5 a3cf26ddf24c256456a15ebfa825e06b files/digest-skk-jisyo-cdb-200308 73
