@@ -1,6 +1,12 @@
 # ChangeLog for app-i18n/skk-jisyo-cdb
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/skk-jisyo-cdb/ChangeLog,v 1.5 2003/09/01 16:13:53 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/skk-jisyo-cdb/ChangeLog,v 1.6 2003/11/15 02:49:17 matsuu Exp $
+
+*skk-jisyo-cdb-200310 (15 Nov 2003)
+
+  15 Nov 2003; MATSUU Takuto <matsuu@gentoo.org> skk-jisyo-cdb-200309.ebuild,
+  skk-jisyo-cdb-200310.ebuild:
+  Add amd64 to KEYWORDS
 
 *skk-jisyo-cdb-200309 (02 Sep 2003)
 
